<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:size="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f7f7f7"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lineColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linLayout_country_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="+86"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="14sp"
                    tools:text="中国" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/more"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f7f7f7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_mobile"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_mobile_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_f7f7f7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_find_code"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_find_code_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/selector_blue"
                    android:gravity="center"
                    android:text="@string/activity_find_send"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/line_google"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_f7f7f7"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/activity_find_google"
                android:textColor="@color/fontColor_gray"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edt_google"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/activity_find_google_hint"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/fontColor_gray"
                android:textColorHint="@color/fontColor_hint"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_paste"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/selector_blue"
                android:gravity="center"
                android:text="@string/activity_find_google_paste"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="107dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/activity_paypwd_pwd"
                    android:textColor="@color/fontColor_gray"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_repassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_paypwd_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="6"
                    android:textColor="@color/fontColor_gray"
                    android:textColorHint="@color/fontColor_hint"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_blue"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</layout>