<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/old_password"
                android:textColor="@color/text_black_cd"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/edit_old_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/activity_find_password_hint"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColorHint="@color/text_hint_color"
                android:textSize="14sp" />


        </LinearLayout>

        <View style="@style/style_split_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_find_password"
                android:textColor="@color/text_black_cd"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/edit_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/activity_find_password_hint"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColorHint="@color/text_hint_color"
                android:textSize="14sp" />


        </LinearLayout>

        <View style="@style/style_split_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/activity_find_repassword"
                android:textColor="@color/text_black_cd"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/edit_new_pwd_re"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@null"
                android:hint="@string/activity_find_password_hint"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColorHint="@color/text_hint_color"
                android:textSize="14sp" />


        </LinearLayout>

        <View style="@style/style_split_line" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_btn_blue_change"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</layout>
